--- a/src/css/uiframework.css
+++ b/src/css/uiframework.css
@@ -5,3 +5,13 @@
 .google-image {
     width: 150px;
 }
+
+input.no-spinner::-webkit-inner-spin-button,
+input.no-spinner::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input.no-spinner {
+    -moz-appearance: textfield;
+}
