add bootstrap as library

--- a/src/css/uiframework.less
+++ b/src/css/uiframework.less
@@ -1,50 +1,55 @@
+@import "mixins.less";
+
 .google-selected-image {
   border: 8px solid deepskyblue;
 }
+
 .google-image {
   width: 150px;
 }
+
 input.no-spinner::-webkit-inner-spin-button,
 input.no-spinner::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
 input.no-spinner {
   -moz-appearance: textfield;
 }
+
 .glyphicon.spinning {
   animation: spin 1s infinite linear;
   -webkit-animation: spin2 1s infinite linear;
 }
+
 @keyframes spin {
-  from {
-    transform: scale(1) rotate(0deg);
-  }
-  to {
-    transform: scale(1) rotate(360deg);
-  }
+  from { transform: scale(1) rotate(0deg); }
+  to { transform: scale(1) rotate(360deg); }
 }
+
 @-webkit-keyframes spin2 {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-  }
+  from { -webkit-transform: rotate(0deg); }
+  to { -webkit-transform: rotate(360deg); }
 }
+
+
 .no-round-corners {
   -webkit-border-radius: 0 !important;
   -moz-border-radius: 0 !important;
   border-radius: 0 !important;
 }
+
 div.growl {
   z-index: 99999;
 }
+
 .round-corners {
   -webkit-border-radius: 3px !important;
   -moz-border-radius: 3px !important;
   border-radius: 3px !important;
 }
+
 .half-round-corners-left {
   -webkit-border-radius: 3px !important;
   -moz-border-radius: 3px !important;
@@ -59,16 +64,18 @@ div.growl {
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
+
 .overflow-auto {
   overflow: auto;
 }
+
 /*INPUT*/
-input,
-button {
+input, button{
   -webkit-border-radius: 3px !important;
   -moz-border-radius: 3px !important;
   border-radius: 3px !important;
 }
+
 .input-width-xsm {
   width: 50px;
 }
