--- a/src/css/uiframework.css
+++ b/src/css/uiframework.css
@@ -81,3 +81,21 @@ button {
 .input-width-lg {
   width: 410px;
 }
+.margin-15 {
+  margin: 15px;
+}
+.margin-10 {
+  margin: 10px;
+}
+.margin-5 {
+  margin: 5px;
+}
+.padding-15 {
+  padding: 15px;
+}
+.padding-10 {
+  padding: 10px;
+}
+.padding-5 {
+  padding: 5px;
+}
