--- a/src/css/uiframework.less
+++ b/src/css/uiframework.less
@@ -101,6 +101,30 @@ input, button{
   margin: 5px;
 }
 
+.margin-left-15 {
+  margin-left: 15px;
+}
+
+.margin-left-10 {
+  margin-left: 10px;
+}
+
+.margin-left-5 {
+  margin-left: 5px;
+}
+
+.margin-right-15 {
+  margin-right: 15px;
+}
+
+.margin-right-10 {
+  margin-right: 10px;
+}
+
+.margin-right-5 {
+  margin-right: 5px;
+}
+
 .padding-15 {
   padding: 15px;
 }
