--- a/src/css/uiframework.css
+++ b/src/css/uiframework.css
@@ -117,3 +117,8 @@ button {
 .padding-5 {
   padding: 5px;
 }
+.sort-header {
+  font-family: helvetica;
+  font-size: 16px;
+  font-weight: 400;
+}
