--- a/src/css/uiframework.less
+++ b/src/css/uiframework.less
@@ -136,3 +136,9 @@ input, button{
 .padding-5 {
   padding: 5px;
 }
+
+.sort-header {
+  font-family: helvetica;
+  font-size: 16px;
+  font-weight: 400;
+}
