--- a/src/css/uiframework.less
+++ b/src/css/uiframework.less
@@ -125,6 +125,30 @@ input, button{
   margin-right: 5px;
 }
 
+.margin-bottom-15 {
+  margin-bottom: 15px;
+}
+
+.margin-bottom-10 {
+  margin-bottom: 10px;
+}
+
+.margin-bottom-5 {
+  margin-bottom: 5px;
+}
+
+.margin-top-15 {
+  margin-top: 15px;
+}
+
+.margin-top-10 {
+  margin-top: 10px;
+}
+
+.margin-top-5 {
+  margin-top: 5px;
+}
+
 .padding-15 {
   padding: 15px;
 }
