--- a/src/css/uiframework.css
+++ b/src/css/uiframework.css
@@ -135,6 +135,21 @@ button {
 .padding-5 {
   padding: 5px;
 }
+.padding-right-0 {
+  padding-right: 0px;
+}
+.padding-right-5 {
+  padding-right: 5px;
+}
+.padding-right-10 {
+  padding-right: 10px;
+}
+.padding-right-15 {
+  padding-right: 15px;
+}
+.date-input.padding-right-0 {
+  padding-right: 0px;
+}
 .sort-header {
   font-family: helvetica;
   font-size: 16px;
