--- a/src/css/uiframework.less
+++ b/src/css/uiframework.less
@@ -161,6 +161,26 @@ input, button{
   padding: 5px;
 }
 
+.padding-right-0 {
+  padding-right: 0px;
+}
+
+.padding-right-5 {
+  padding-right: 5px;
+}
+
+.padding-right-10 {
+  padding-right: 10px;
+}
+
+.padding-right-15 {
+  padding-right: 15px;
+}
+
+.date-input.padding-right-0 {
+  padding-right: 0px;
+}
+
 .sort-header {
   font-family: helvetica;
   font-size: 16px;
