add max width and height classes to css

--- a/src/css/uiframework.less
+++ b/src/css/uiframework.less
@@ -181,6 +181,14 @@ input, button{
   padding-right: 0px;
 }
 
+.max-width-100 {
+  max-width: 100%;
+}
+
+.max-height-100 {
+  max-height: 100%;
+}
+
 .sort-header {
   font-family: helvetica;
   font-size: 16px;
