--- a/src/css/uiframework.css
+++ b/src/css/uiframework.css
@@ -150,6 +150,12 @@ button {
 .date-input.padding-right-0 {
   padding-right: 0px;
 }
+.max-width-100 {
+  max-width: 100%;
+}
+.max-height-100 {
+  max-height: 100%;
+}
 .sort-header {
   font-family: helvetica;
   font-size: 16px;
